@@ -561,6 +561,8 @@ void delete_opennode(openfilestruct *fileptr)
 #ifndef NANO_TINY
     free(fileptr->current_stat);
     free(fileptr->lock_filename);
+    /* Free the undo stack. */
+    discard_until(NULL, fileptr);
 #endif
     free(fileptr);
 }
